lavamoat - fresh config

--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -168,6 +168,20 @@
         "to-fast-properties": true
       }
     },
+    "@choojs/findup": {
+      "builtin": {
+        "events.EventEmitter": true,
+        "fs.access": true,
+        "fs.accessSync": true,
+        "fs.exists": true,
+        "fs.existsSync": true,
+        "path.join": true,
+        "util.inherits": true
+      },
+      "globals": {
+        "console.log": true
+      }
+    },
     "@gulp-sourcemaps/identity-map": {
       "packages": {
         "acorn": true,
@@ -221,6 +235,24 @@
       "packages": {
         "@nodelib/fs.scandir": true,
         "fastq": true
+      }
+    },
+    "@stylelint/postcss-css-in-js": {
+      "globals": {
+        "__dirname": true
+      },
+      "packages": {
+        "@babel/core": true,
+        "postcss": true,
+        "postcss-syntax": true
+      }
+    },
+    "@stylelint/postcss-markdown": {
+      "packages": {
+        "postcss-html": true,
+        "postcss-syntax": true,
+        "remark": true,
+        "unist-util-find-all-after": true
       }
     },
     "JSONStream": {
@@ -322,16 +354,6 @@
       },
       "packages": {
         "buffer-equal": true
-      }
-    },
-    "are-we-there-yet": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "util.inherits": true
-      },
-      "packages": {
-        "delegates": true,
-        "readable-stream": true
       }
     },
     "arr-diff": {
@@ -704,7 +726,6 @@
         "anymatch": true,
         "async-each": true,
         "braces": true,
-        "fsevents": true,
         "glob-parent": true,
         "inherits": true,
         "is-binary-path": true,
@@ -785,21 +806,6 @@
         "process": true
       }
     },
-    "colors": {
-      "builtin": {
-        "os.release": true,
-        "util.inspect": true
-      },
-      "globals": {
-        "console.log": true,
-        "process.argv": true,
-        "process.env": true,
-        "process.platform": true,
-        "process.stderr": true,
-        "process.stdout": true,
-        "process.versions.node.split": true
-      }
-    },
     "combine-source-map": {
       "builtin": {
         "path.dirname": true,
@@ -838,11 +844,6 @@
       },
       "packages": {
         "safe-buffer": true
-      }
-    },
-    "core-util-is": {
-      "globals": {
-        "Buffer.isBuffer": true
       }
     },
     "cosmiconfig": {
@@ -918,7 +919,7 @@
     },
     "default-resolution": {
       "globals": {
-        "process.version": true
+        "process.version.match": true
       }
     },
     "define-properties": {
@@ -957,16 +958,6 @@
         "escope": true
       }
     },
-    "detect-libc": {
-      "builtin": {
-        "child_process.spawnSync": true,
-        "fs.readdirSync": true,
-        "os.platform": true
-      },
-      "globals": {
-        "process.env": true
-      }
-    },
     "detective": {
       "packages": {
         "acorn-node": true,
@@ -985,6 +976,26 @@
       },
       "packages": {
         "path-type": true
+      }
+    },
+    "dom-serializer": {
+      "packages": {
+        "domelementtype": true,
+        "entities": true
+      }
+    },
+    "domhandler": {
+      "packages": {
+        "domelementtype": true
+      }
+    },
+    "domutils": {
+      "globals": {
+        "hasOwnProperty.call": true
+      },
+      "packages": {
+        "dom-serializer": true,
+        "domelementtype": true
       }
     },
     "duplexer": {
@@ -1308,23 +1319,6 @@
         "to-regex-range": true
       }
     },
-    "findup": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "fs.exists": true,
-        "fs.existsSync": true,
-        "path.exists": true,
-        "path.existsSync": true,
-        "path.join": true,
-        "util.inherits": true
-      },
-      "globals": {
-        "console.log": true
-      },
-      "packages": {
-        "colors": true
-      }
-    },
     "first-chunk-stream": {
       "builtin": {
         "util.inherits": true
@@ -1447,44 +1441,6 @@
         "process.throwDeprecation": true,
         "process.traceDeprecation": true,
         "process.version": true
-      }
-    },
-    "fsevents": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "fs.stat": true,
-        "path.join": true,
-        "util.inherits": true
-      },
-      "globals": {
-        "__dirname": true,
-        "process.nextTick": true,
-        "process.platform": true,
-        "setImmediate": true
-      },
-      "packages": {
-        "node-pre-gyp": true
-      }
-    },
-    "gauge": {
-      "builtin": {
-        "util.format": true
-      },
-      "globals": {
-        "clearInterval": true,
-        "process": true,
-        "setImmediate": true,
-        "setInterval": true
-      },
-      "packages": {
-        "aproba": true,
-        "console-control-strings": true,
-        "has-unicode": true,
-        "object-assign": true,
-        "signal-exit": true,
-        "string-width": true,
-        "strip-ansi": true,
-        "wide-align": true
       }
     },
     "get-assigned-identifiers": {
@@ -1650,6 +1606,12 @@
         "path.join": true
       }
     },
+    "gonzales-pe": {
+      "globals": {
+        "console.error": true,
+        "define": true
+      }
+    },
     "graceful-fs": {
       "builtin": {
         "assert.equal": true,
@@ -1657,7 +1619,7 @@
         "constants.O_WRONLY": true,
         "constants.hasOwnProperty": true,
         "fs": true,
-        "stream.Stream": true,
+        "stream.Stream.call": true,
         "util": true
       },
       "globals": {
@@ -1863,16 +1825,6 @@
         "process.argv": true
       }
     },
-    "has-unicode": {
-      "builtin": {
-        "os.type": true
-      },
-      "globals": {
-        "process.env.LANG": true,
-        "process.env.LC_ALL": true,
-        "process.env.LC_CTYPE": true
-      }
-    },
     "has-value": {
       "packages": {
         "get-value": true,
@@ -1884,6 +1836,21 @@
       "packages": {
         "is-number": true,
         "kind-of": true
+      }
+    },
+    "htmlparser2": {
+      "builtin": {
+        "buffer.Buffer": true,
+        "events.EventEmitter": true,
+        "string_decoder.StringDecoder": true
+      },
+      "packages": {
+        "domelementtype": true,
+        "domhandler": true,
+        "domutils": true,
+        "entities": true,
+        "inherits": true,
+        "readable-stream": true
       }
     },
     "http-parser-js": {
@@ -1967,6 +1934,12 @@
         "kind-of": true
       }
     },
+    "is-alphanumerical": {
+      "packages": {
+        "is-alphabetical": true,
+        "is-decimal": true
+      }
+    },
     "is-binary-path": {
       "builtin": {
         "path.extname": true
@@ -1995,11 +1968,6 @@
     "is-extendable": {
       "packages": {
         "is-plain-object": true
-      }
-    },
-    "is-fullwidth-code-point": {
-      "packages": {
-        "number-is-nan": true
       }
     },
     "is-glob": {
@@ -2214,15 +2182,25 @@
         "object-visit": true
       }
     },
+    "markdown-table": {
+      "packages": {
+        "repeat-string": true
+      }
+    },
     "math-random": {
       "builtin": {
         "crypto.randomBytes": true
       }
     },
+    "mdast-util-compact": {
+      "packages": {
+        "unist-util-visit": true
+      }
+    },
     "memoizee": {
       "globals": {
         "clearTimeout": true,
-        "hasOwnProperty": true,
+        "hasOwnProperty.call": true,
         "setTimeout": true
       },
       "packages": {
@@ -2388,38 +2366,6 @@
         "setTimeout": true
       }
     },
-    "node-pre-gyp": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "fs.existsSync": true,
-        "fs.readFileSync": true,
-        "fs.renameSync": true,
-        "path.dirname": true,
-        "path.existsSync": true,
-        "path.join": true,
-        "path.resolve": true,
-        "url.parse": true,
-        "url.resolve": true,
-        "util.inherits": true
-      },
-      "globals": {
-        "__dirname": true,
-        "console.log": true,
-        "process.arch": true,
-        "process.cwd": true,
-        "process.env": true,
-        "process.platform": true,
-        "process.version.substr": true,
-        "process.versions": true
-      },
-      "packages": {
-        "detect-libc": true,
-        "nopt": true,
-        "npmlog": true,
-        "rimraf": true,
-        "semver": true
-      }
-    },
     "node-sass": {
       "builtin": {
         "fs.existsSync": true,
@@ -2459,24 +2405,6 @@
         "true-case-path": true
       }
     },
-    "nopt": {
-      "builtin": {
-        "path": true,
-        "stream.Stream": true,
-        "url": true
-      },
-      "globals": {
-        "console": true,
-        "process.argv": true,
-        "process.env.DEBUG_NOPT": true,
-        "process.env.NOPT_DEBUG": true,
-        "process.platform": true
-      },
-      "packages": {
-        "abbrev": true,
-        "osenv": true
-      }
-    },
     "normalize-path": {
       "packages": {
         "remove-trailing-separator": true
@@ -2490,22 +2418,6 @@
     "now-and-later": {
       "packages": {
         "once": true
-      }
-    },
-    "npmlog": {
-      "builtin": {
-        "events.EventEmitter": true,
-        "util": true
-      },
-      "globals": {
-        "process.nextTick": true,
-        "process.stderr": true
-      },
-      "packages": {
-        "are-we-there-yet": true,
-        "console-control-strings": true,
-        "gauge": true,
-        "set-blocking": true
       }
     },
     "object-copy": {
@@ -2580,54 +2492,6 @@
         "readable-stream": true
       }
     },
-    "os-homedir": {
-      "builtin": {
-        "os.homedir": true
-      },
-      "globals": {
-        "process.env": true,
-        "process.getuid": true,
-        "process.platform": true
-      }
-    },
-    "os-tmpdir": {
-      "globals": {
-        "process.env.SystemRoot": true,
-        "process.env.TEMP": true,
-        "process.env.TMP": true,
-        "process.env.TMPDIR": true,
-        "process.env.windir": true,
-        "process.platform": true
-      }
-    },
-    "osenv": {
-      "builtin": {
-        "child_process.exec": true,
-        "path": true
-      },
-      "globals": {
-        "process.env.COMPUTERNAME": true,
-        "process.env.ComSpec": true,
-        "process.env.EDITOR": true,
-        "process.env.HOSTNAME": true,
-        "process.env.PATH": true,
-        "process.env.PROMPT": true,
-        "process.env.PS1": true,
-        "process.env.Path": true,
-        "process.env.SHELL": true,
-        "process.env.USER": true,
-        "process.env.USERDOMAIN": true,
-        "process.env.USERNAME": true,
-        "process.env.VISUAL": true,
-        "process.env.path": true,
-        "process.nextTick": true,
-        "process.platform": true
-      },
-      "packages": {
-        "os-homedir": true,
-        "os-tmpdir": true
-      }
-    },
     "parent-module": {
       "packages": {
         "callsites": true
@@ -2640,6 +2504,16 @@
       },
       "packages": {
         "path-platform": true
+      }
+    },
+    "parse-entities": {
+      "packages": {
+        "character-entities": true,
+        "character-entities-legacy": true,
+        "character-reference-invalid": true,
+        "is-alphanumerical": true,
+        "is-decimal": true,
+        "is-hexadecimal": true
       }
     },
     "parse-glob": {
@@ -2766,12 +2640,37 @@
         "supports-color": true
       }
     },
+    "postcss-html": {
+      "globals": {
+        "__dirname": true
+      },
+      "packages": {
+        "htmlparser2": true,
+        "postcss-syntax": true
+      }
+    },
+    "postcss-less": {
+      "packages": {
+        "postcss": true
+      }
+    },
     "postcss-reporter": {
       "packages": {
         "lodash": true
       }
     },
     "postcss-safe-parser": {
+      "packages": {
+        "postcss": true
+      }
+    },
+    "postcss-sass": {
+      "packages": {
+        "gonzales-pe": true,
+        "postcss": true
+      }
+    },
+    "postcss-scss": {
       "packages": {
         "postcss": true
       }
@@ -2893,7 +2792,6 @@
         "setImmediate": true
       },
       "packages": {
-        "core-util-is": true,
         "inherits": true,
         "isarray": true,
         "process-nextick-args": true,
@@ -2926,6 +2824,51 @@
       "packages": {
         "extend-shallow": true,
         "safe-regex": true
+      }
+    },
+    "remark": {
+      "packages": {
+        "remark-parse": true,
+        "remark-stringify": true,
+        "unified": true
+      }
+    },
+    "remark-parse": {
+      "packages": {
+        "ccount": true,
+        "collapse-white-space": true,
+        "is-alphabetical": true,
+        "is-decimal": true,
+        "is-whitespace-character": true,
+        "is-word-character": true,
+        "markdown-escapes": true,
+        "parse-entities": true,
+        "repeat-string": true,
+        "state-toggle": true,
+        "trim": true,
+        "trim-trailing-lines": true,
+        "unherit": true,
+        "unist-util-remove-position": true,
+        "vfile-location": true,
+        "xtend": true
+      }
+    },
+    "remark-stringify": {
+      "packages": {
+        "ccount": true,
+        "is-alphanumeric": true,
+        "is-decimal": true,
+        "is-whitespace-character": true,
+        "longest-streak": true,
+        "markdown-escapes": true,
+        "markdown-table": true,
+        "mdast-util-compact": true,
+        "parse-entities": true,
+        "repeat-string": true,
+        "state-toggle": true,
+        "stringify-entities": true,
+        "unherit": true,
+        "xtend": true
       }
     },
     "remove-bom-buffer": {
@@ -3031,7 +2974,7 @@
         "process.env.USERPROFILE": true
       },
       "packages": {
-        "findup": true,
+        "@choojs/findup": true,
         "postcss": true,
         "strip-json-comments": true
       }
@@ -3108,12 +3051,6 @@
     "sesify-tofu": {
       "packages": {
         "acorn-globals": true
-      }
-    },
-    "set-blocking": {
-      "globals": {
-        "process.stderr": true,
-        "process.stdout": true
       }
     },
     "set-value": {
@@ -3312,7 +3249,6 @@
     },
     "string-width": {
       "packages": {
-        "code-point-at": true,
         "emoji-regex": true,
         "is-fullwidth-code-point": true,
         "strip-ansi": true
@@ -3324,6 +3260,15 @@
       },
       "packages": {
         "safe-buffer": true
+      }
+    },
+    "stringify-entities": {
+      "packages": {
+        "character-entities-html4": true,
+        "character-entities-legacy": true,
+        "is-alphanumerical": true,
+        "is-decimal": true,
+        "is-hexadecimal": true
       }
     },
     "strip-ansi": {
@@ -3371,6 +3316,8 @@
         "process.stdout.isTTY": true
       },
       "packages": {
+        "@stylelint/postcss-css-in-js": true,
+        "@stylelint/postcss-markdown": true,
         "autoprefixer": true,
         "balanced-match": true,
         "chalk": true,
@@ -3393,10 +3340,14 @@
         "micromatch": true,
         "normalize-selector": true,
         "postcss": true,
+        "postcss-html": true,
+        "postcss-less": true,
         "postcss-media-query-parser": true,
         "postcss-reporter": true,
         "postcss-resolve-nested-selector": true,
         "postcss-safe-parser": true,
+        "postcss-sass": true,
+        "postcss-scss": true,
         "postcss-selector-parser": true,
         "postcss-syntax": true,
         "postcss-value-parser": true,
@@ -3405,9 +3356,15 @@
         "specificity": true,
         "string-width": true,
         "style-search": true,
+        "sugarss": true,
         "svg-tags": true,
         "table": true,
         "write-file-atomic": true
+      }
+    },
+    "sugarss": {
+      "packages": {
+        "postcss": true
       }
     },
     "supports-color": {
@@ -3590,6 +3547,22 @@
         "undertaker-registry": true
       }
     },
+    "unherit": {
+      "packages": {
+        "inherits": true,
+        "xtend": true
+      }
+    },
+    "unified": {
+      "packages": {
+        "bail": true,
+        "extend": true,
+        "is-buffer": true,
+        "is-plain-obj": true,
+        "trough": true,
+        "vfile": true
+      }
+    },
     "union-value": {
       "packages": {
         "arr-union": true,
@@ -3602,6 +3575,26 @@
       "packages": {
         "json-stable-stringify": true,
         "through2-filter": true
+      }
+    },
+    "unist-util-find-all-after": {
+      "packages": {
+        "unist-util-is": true
+      }
+    },
+    "unist-util-remove-position": {
+      "packages": {
+        "unist-util-visit": true
+      }
+    },
+    "unist-util-visit": {
+      "packages": {
+        "unist-util-visit-parents": true
+      }
+    },
+    "unist-util-visit-parents": {
+      "packages": {
+        "unist-util-is": true
       }
     },
     "unset-value": {
@@ -3628,6 +3621,28 @@
     "util-deprecate": {
       "builtin": {
         "util.deprecate": true
+      }
+    },
+    "vfile": {
+      "builtin": {
+        "path.basename": true,
+        "path.dirname": true,
+        "path.extname": true,
+        "path.join": true,
+        "path.sep": true
+      },
+      "globals": {
+        "process.cwd": true
+      },
+      "packages": {
+        "is-buffer": true,
+        "replace-ext": true,
+        "vfile-message": true
+      }
+    },
+    "vfile-message": {
+      "packages": {
+        "unist-util-stringify-position": true
       }
     },
     "vinyl": {
@@ -3774,7 +3789,7 @@
       },
       "globals": {
         "Buffer": true,
-        "process.version": true
+        "process.version.match": true
       },
       "packages": {
         "http-parser-js": true,
@@ -3794,11 +3809,6 @@
       },
       "packages": {
         "isexe": true
-      }
-    },
-    "wide-align": {
-      "packages": {
-        "string-width": true
       }
     },
     "write": {
