--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -919,7 +919,7 @@
     },
     "default-resolution": {
       "globals": {
-        "process.version.match": true
+        "process.version": true
       }
     },
     "define-properties": {
@@ -991,7 +991,7 @@
     },
     "domutils": {
       "globals": {
-        "hasOwnProperty.call": true
+        "hasOwnProperty": true
       },
       "packages": {
         "dom-serializer": true,
@@ -1619,7 +1619,7 @@
         "constants.O_WRONLY": true,
         "constants.hasOwnProperty": true,
         "fs": true,
-        "stream.Stream.call": true,
+        "stream.Stream": true,
         "util": true
       },
       "globals": {
@@ -2200,7 +2200,7 @@
     "memoizee": {
       "globals": {
         "clearTimeout": true,
-        "hasOwnProperty.call": true,
+        "hasOwnProperty": true,
         "setTimeout": true
       },
       "packages": {
@@ -3789,7 +3789,7 @@
       },
       "globals": {
         "Buffer": true,
-        "process.version.match": true
+        "process.version": true
       },
       "packages": {
         "http-parser-js": true,
