--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -936,7 +936,7 @@
     },
     "default-resolution": {
       "globals": {
-        "process.version.match": true
+        "process.version": true
       }
     },
     "define-properties": {
@@ -1018,7 +1018,7 @@
     },
     "domutils": {
       "globals": {
-        "hasOwnProperty.call": true
+        "hasOwnProperty": true
       },
       "packages": {
         "dom-serializer": true,
@@ -1701,7 +1701,7 @@
         "constants.O_WRONLY": true,
         "constants.hasOwnProperty": true,
         "fs": true,
-        "stream.Stream.call": true,
+        "stream.Stream": true,
         "util": true
       },
       "globals": {
@@ -2310,7 +2310,7 @@
     "memoizee": {
       "globals": {
         "clearTimeout": true,
-        "hasOwnProperty.call": true,
+        "hasOwnProperty": true,
         "setTimeout": true
       },
       "packages": {
@@ -4021,7 +4021,7 @@
       },
       "globals": {
         "Buffer": true,
-        "process.version.match": true
+        "process.version": true
       },
       "packages": {
         "http-parser-js": true,
