--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -1432,7 +1432,7 @@
     },
     "default-resolution": {
       "globals": {
-        "process.version.match": true
+        "process.version": true
       }
     },
     "define-properties": {
@@ -1514,7 +1514,7 @@
     },
     "domutils": {
       "globals": {
-        "hasOwnProperty.call": true
+        "hasOwnProperty": true
       },
       "packages": {
         "dom-serializer": true,
@@ -2197,7 +2197,7 @@
         "constants.O_WRONLY": true,
         "constants.hasOwnProperty": true,
         "fs": true,
-        "stream.Stream.call": true,
+        "stream.Stream": true,
         "util": true
       },
       "globals": {
@@ -2811,7 +2811,7 @@
     "memoizee": {
       "globals": {
         "clearTimeout": true,
-        "hasOwnProperty.call": true,
+        "hasOwnProperty": true,
         "setTimeout": true
       },
       "packages": {
@@ -4561,7 +4561,7 @@
       },
       "globals": {
         "Buffer": true,
-        "process.version.match": true
+        "process.version": true
       },
       "packages": {
         "http-parser-js": true,
