--- a/lavamoat-config.json
+++ b/lavamoat-config.json
@@ -948,7 +948,7 @@
     },
     "default-resolution": {
       "globals": {
-        "process.version.match": true
+        "process.version": true
       }
     },
     "define-properties": {
@@ -1030,7 +1030,7 @@
     },
     "domutils": {
       "globals": {
-        "hasOwnProperty.call": true
+        "hasOwnProperty": true
       },
       "packages": {
         "dom-serializer": true,
@@ -1713,7 +1713,7 @@
         "constants.O_WRONLY": true,
         "constants.hasOwnProperty": true,
         "fs": true,
-        "stream.Stream.call": true,
+        "stream.Stream": true,
         "util": true
       },
       "globals": {
@@ -2322,7 +2322,7 @@
     "memoizee": {
       "globals": {
         "clearTimeout": true,
-        "hasOwnProperty.call": true,
+        "hasOwnProperty": true,
         "setTimeout": true
       },
       "packages": {
@@ -4033,7 +4033,7 @@
       },
       "globals": {
         "Buffer": true,
-        "process.version.match": true
+        "process.version": true
       },
       "packages": {
         "http-parser-js": true,
