--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "storybook:build": "build-storybook -c .storybook -o .out --static-dir ./app ./storybook/images",
     "storybook:deploy": "storybook-to-ghpages --existing-output-dir .out --remote storybook --branch master",
     "update-changelog": "./development/auto-changelog.sh",
-    "generate:migration": "./development/generate-migration.sh",
-    "postinstall": "patch-package"
+    "generate:migration": "./development/generate-migration.sh"
   },
   "resolutions": {
     "**/configstore/dot-prop": "^5.1.1",
@@ -258,7 +257,6 @@
     "node-fetch": "^2.6.1",
     "node-sass": "^4.14.1",
     "nyc": "^15.0.0",
-    "patch-package": "^6.2.2",
     "polyfill-crypto.getrandomvalues": "^1.0.0",
     "prettier": "^2.1.1",
     "prettier-plugin-sort-json": "^0.0.1",
