require @babel/plugin-proposal-object-rest-spread in build/development/index, modification to override config

--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -68,6 +68,11 @@
       "packages": {
         "postcss": true
       }
+    },
+    "module-deps": {
+      "packages": {
+        "loose-envify": true
+      }
     }
   }
 }
