require @babel/plugin-transform-runtime inside build, more config overrides

--- a/lavamoat-config-override.json
+++ b/lavamoat-config-override.json
@@ -73,6 +73,12 @@
       "packages": {
         "loose-envify": true
       }
+    },
+    "@babel/core": {
+      "packages": {
+        "@babel/plugin-proposal-object-rest-spread": true,
+        "<root>": true
+      }
     }
   }
 }
